--- a/html/notice.html
+++ b/html/notice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEENAGERS</title>
@@ -28,11 +28,13 @@
       </div>
     </header>
     <main class="notice-main">
+      <!--
       <div class="notice-div">
         <a class="notice-div__a" href="notice/2023.12.22:1.html"
           >TEENAGERS LOL 2024 S1</a
         >
       </div>
+      -->
     </main>
     <script
       src="https://kit.fontawesome.com/45a7eba1bc.js"
