--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEENAGERS</title>
@@ -29,7 +29,8 @@
     </header>
     <main class="schedule-main">
       <div class="schedule-container">
-        <h1 class="schedule-date">1월 6일</h1>
+        <h1 class="schedule-date">예정된 일정이 없음</h1>
+        <!--
         <div class="schedule-div">
           <span class="schedule-time">15시</span>
           <div class="schedule-team__div">
@@ -64,7 +65,7 @@
             <p class="schedule-team__p">VS</p>
             <p class="schedule-team__p">다나가</p>
           </div>
-        </div>
+        </div>-->
       </div>
     </main>
     <script
