--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <link rel="shortcut icon" href="#" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEENAGERS</title>
